<resources>
    <string name="app_name">Timezone QuickSettings</string>
    <string name="tile_label_before_add">Time in the world</string>
    <string name="tile_label_unitialized">Touch to set…</string>
    <string name="toast_touch_to_initialize">Added! Click on the quick setting to define timezone.</string>
    <string name="pick_timezone">Pick timezone</string>
    <string name="new_timezone_toast">"New timezone: %s"</string>
    <string name="tutorial1">\t• Display the notification drawer</string>
    <string name="tutorial2">\t• Touch the small \"⌄\" on the top-right corner</string>
    <string name="tutorial3">\t• Tap the pencil at the top of the screen</string>
    <string name="tutorial4">\t• Select \"Time in the world\" and drag it into the first section</string>
    <string name="tutorial5">\t• Press back</string>
    <string name="tutorial6">\t• Touch the clock icon</string>
    <string name="tutorial7">\t• Pick timezone</string>
    <string name="tutorial8">\t• You\'re done :)</string>

    <string name="how_to_use">How to use?</string>
    <string name="search">Search...</string>

</resources>
